Updated the menu spacing to correct misplaced content and link.

--- a/app/assets/stylesheets/screen.css
+++ b/app/assets/stylesheets/screen.css
@@ -359,6 +359,9 @@ header h1 span {
 section.section-content {
   background-color: #ffffff;
 }
+#about{
+  margin-top: 30px;
+}
 /* ==============
     ADVERTISTING
    ============== */
